--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.21",
     "path": "^0.12.7",
-    "request": "^2.88.2"
-  },
-  "type": "module"
+    "request": "^2.88.2",
+    "typewriter-effect": "^2.20.1"
+  }
 }
